@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-22T02:04:59Z",
-  "count_outdated" : 272,
-  "uniques_outdated" : 238,
+  "timestamp" : "2025-10-04T01:50:02Z",
+  "count_outdated" : 273,
+  "uniques_outdated" : 239,
   "count" : 274,
   "uniques" : 240,
   "clones" : [
-    {
-      "timestamp": "2025-09-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-21T00:00:00Z",
       "count": 1,
