@@ -1,3 +1,12 @@
+2025-10-04T01:50:02Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18237888323 # 786
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-04
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 238 272 / 240 274
+* notice: next accum: outdated-unq outdated-all / unq all: 239 273 / 240 274
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-09-20] / []
+
 2025-09-22T02:04:59Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17902410969 # 774
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-22
